# fishing-prediction

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-module1.txt  requirements-module2.txt  requirements-module3.txt  requirements.txt
.claude/: settings.json
backend/: Cargo.toml  import_spots.py  predict_day_helper.py  predict_helper.py  spots.json
backend/frontend/: index.html  manifest.json  sw.js
backend/src/: main.rs
config/: module1_config.yaml  module2_config.yaml  module3_config.yaml
module1_market_research/: __init__.py  main.py
module1_market_research/analyzers/: report_generator.py  sentiment.py  topics.py
module1_market_research/scrapers/: app_store_cn.py  base.py  keyword.txt  search_local.py  xiaohongshu.py
module2_competitive_analysis/: cli_dashboard.py  main.py  storage.py  tracker.py
module3_prediction_model/: config.py  main.py
module3_prediction_model/data/: astronomy.py  diary_importer.py  weather_collector.py
module3_prediction_model/evaluation/: metrics.py
module3_prediction_model/factors/: astronomical_factor.py  base.py  hydrological_factor.py  temporal_factor.py  weather_factor.py
module3_prediction_model/inference/: predictor.py
module3_prediction_model/models/: model_metadata.json  rule_based.py
module3_prediction_model/training/: prepare_data.py  train_model.py
scripts/: run_fish_pipeline.py  upload_model.py
